--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -1,6 +1,5 @@
-doctype
-html
-    head
-        link(href="/favicon.ico", rel="shortcut icon", type="image/x-icon")
-    body
-        h1 Hello, World from the MEAN Stack!
+extends ../includes/layout
+
+block main-content
+    section.content
+        h1 Hello World From the MEAN Stack!
