--- a/server/includes/layout.jade
+++ b/server/includes/layout.jade
@@ -5,7 +5,7 @@ html
         link(rel="stylesheet", href="/css/bootstrap.min.css")
         link(rel="stylesheet", href="/vendor/toastr/toastr.css")
         link(rel="stylesheet", href="/css/site.css")
-    body
+    body(ng-app="app")
         block main-content
         include scripts
 
